# soundcloud

./: .env  .gitignore  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_03_26_1722-0da4f2f72b0f_new_tables.py  2024_03_26_2235-51c4135bf82a_playlist_table.py
src/auth/: __init__.py  backend.py  manager.py  models.py  router.py
src/auth/crud/: dependencies.py  repository.py  service.py
src/config/: __init__.py  schemas.py
src/config/crud/: __init__.py  dependencies.py  repository.py  service.py  upload.py
src/config/database/: __init__.py  connection.py  models.py
src/sounds/: __init__.py  models.py  router.py
src/sounds/crud/: __init__.py  dependencies.py  repository.py
